RAIN-2113 (W&S :: Public Domain Search :: Apk Alignment Issues) (#2168)

--- a/frontend/mono-ui/web/rainmaker/packages/citizen/src/ui-views/ScreenInterface/index.scss
+++ b/frontend/mono-ui/web/rainmaker/packages/citizen/src/ui-views/ScreenInterface/index.scss
@@ -129,6 +129,7 @@ div[class^="MuiTooltip-tooltip"] {
     /* left: 35px; */
     width: 100%;
     overflow: inherit !important;
+    left: 0 !important;
   }
   .apply-wizard-footer { button {
      /* min-width: 360px !important; */
